--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -8,5 +8,11 @@
     "Issuer": "",
     "Audience": "",
     "ExpirationInMinutes": 0
+  },
+  "Email": {
+    "Host": "",
+    "Port": 0,
+    "SenderEmail": "",
+    "Sender": ""
   }
 }
