--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -6,6 +6,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Serilog" />
     <PackageReference Include="Scrutor" />
+    <PackageReference Include="FluentEmail.Smtp" />
+
   </ItemGroup>
 
   <ItemGroup>
