--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -3,10 +3,7 @@
     "Database": "Host=postgres;Port=5432;Database=clean-architecture;Username=postgres;Password=postgres;Include Error Detail=true"
   },
   "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.Seq"
-    ],
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.Seq"],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -20,12 +17,18 @@
         "Args": { "ServerUrl": "http://seq:5341" }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   },
   "Jwt": {
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
     "Issuer": "clean-architecture",
     "Audience": "developers",
     "ExpirationInMinutes": 60
+  },
+  "Email": {
+    "Host": "papercut",
+    "Port": 25,
+    "SenderEmail": "mentormentee@noreply.com",
+    "Sender": "MentorMentee"
   }
 }
