--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
 	<InternalsVisibleTo Include="Application.UnitTests" />
+    <InternalsVisibleTo Include="ArchitectureTests" />
   </ItemGroup>
 
   <ItemGroup>
