--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
 	<InternalsVisibleTo Include="ArchitectureTests" />
+    <InternalsVisibleTo Include="IntegrationsTests" />
   </ItemGroup>
 
 </Project>
