--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -23,7 +23,8 @@
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
     "Issuer": "clean-architecture",
     "Audience": "developers",
-    "ExpirationInMinutes": 60
+    "ExpirationInMinutes": 15,
+    "RefreshExpirationInDays": 2 
   },
   "Email": {
     "Host": "papercut",
