--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,11 +5,13 @@
   <!--.NET 9 packages. Most of them will work on .NET 8. If you need to, make the updates here individually.-->
   <ItemGroup>
     <PackageVersion Include="Bogus" Version="35.6.3" />
+    <PackageVersion Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.4" />
     <!-- Static code analysis -->
     <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.20" />
     <PackageVersion Include="Hangfire.Console" Version="1.4.3" />
     <PackageVersion Include="Hangfire.PostgreSql" Version="1.20.12" />
+    <PackageVersion Include="Microsoft.Extensions.Identity.Stores" Version="9.0.6" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.9.0.115408" />
     <!-- Application -->
     <PackageVersion Include="Scrutor" Version="6.1.0" />
