--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,7 +4,10 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "web.api": "StartDebugging"
+        "papercut": "StartWithoutDebugging",
+        "postgres": "StartWithoutDebugging",
+        "seq": "StartWithoutDebugging",
+        "web-api": "StartDebugging"
       }
     }
   }
