--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -24,12 +24,23 @@
     "Issuer": "clean-architecture",
     "Audience": "developers",
     "ExpirationInMinutes": 15,
-    "RefreshExpirationInDays": 2
+    "RefreshExpirationInDays": 2,
+    "MaxActiveTokensPerUser": 5
+  },
+  "Google": {
+    "ClientId": "your-google-client-id.apps.googleusercontent.com",
+    "ClientSecret": "your-google-client-secret"
+  },
+  "AWS": {
+    "AccessKey": "AKIA33KKBBTC3UIB5SPH",
+    "SecretKey": "FdvM6mkVyuv8W4y/eDTXnevTEnEbDOfobxSsbnVX",
+    "Region": "eu-north-1"
   },
   "Email": {
-    "Host": "papercut",
-    "Port": 25,
-    "SenderEmail": "mentormentee@noreply.com",
-    "Sender": "MentorMentee"
+    "SenderEmail": "yesslandolsi@gmail.com"
+  } , 
+  "FrontEnd": {
+    "BaseUrl": "http://localhost:5173" , 
+    "EmailVerificationPagePath" : "/email-verification"
   }
 }
