--- a/tests/IntegrationsTests/IntegrationsTests.csproj
+++ b/tests/IntegrationsTests/IntegrationsTests.csproj
@@ -9,18 +9,23 @@
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
 		<PackageReference Include="FluentEmail.Smtp" />
         <PackageReference Include="Bogus" />
+        <PackageReference Include="Moq" />
+        <PackageReference Include="Respawn" />
         <PackageReference Include="Shouldly" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
         <PackageReference Include="coverlet.collector" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="Testcontainers" />
         <PackageReference Include="Testcontainers.PostgreSql" />
-        <PackageReference Include="xunit"/>
-        <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.visualstudio">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup> 
 
     <ItemGroup>
-        <Using Include="Xunit"/>
+        <Using Include="Xunit" />
     </ItemGroup> 
 
     <ItemGroup>
