--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
 
   postgres:
-    image: postgres:17
+    image: postgres:latest
     container_name: postgres
     environment:
       - POSTGRES_DB=clean-architecture
@@ -28,6 +28,11 @@ services:
       - ./.containers/db:/var/lib/postgresql/data
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d clean-architecture"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   seq:
     image: datalust/seq:2024.3
@@ -37,13 +42,14 @@ services:
     ports:
       - 8081:80
 
+
   # for local development : papercut sumulates an SMTP server ( without sending emails )
   # we can view whats happening on port 8080
   # for production u have to specify the real smtp server
-  papercut:
-    image: changemakerstudiosus/papercut-smtp:latest
-    container_name: papercut
-    ports:
-      - 8080:80
-      - 25:25
-      # 25 for local smtp server
+  # papercut:
+  #   image: changemakerstudiosus/papercut-smtp:latest
+  #   container_name: papercut
+  #   ports:
+  #     - 8080:80
+  #     - 25:25
+  #     25 for local smtp server
