--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -1,35 +1,21 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=clean-architecture;Username=postgres;Password=postgres;Include Error Detail=true"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Information"
-      }
-    },
-    "WriteTo": [
-      { "Name": "Console" },
-      {
-        "Name": "Seq",
-        "Args": { "ServerUrl": "http://seq:5341" }
-      }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+   
   },
   "Jwt": {
-    "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
-    "Issuer": "clean-architecture",
-    "Audience": "developers",
-    "ExpirationInMinutes": 15,
-    "RefreshExpirationInDays": 2 
+
+  },
+  "Google": {
+
+  },
+  "AWS": {
+
   },
   "Email": {
-    "Host": "papercut",
-    "Port": 25,
-    "SenderEmail": "mentormentee@noreply.com",
-    "Sender": "MentorMentee"
+  } , 
+  "FrontEnd": {
+
   }
 }
