--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,7 +5,7 @@
   <!--.NET 9 packages. Most of them will work on .NET 8. If you need to, make the updates here individually.-->
   <ItemGroup>
     <PackageVersion Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.1" />
-    <PackageVersion Include="AWSSDK.SimpleEmail" Version="4.0.0.9" />
+    <PackageVersion Include="AWSSDK.SimpleEmail" Version="4.0.0.10" />
     <PackageVersion Include="Bogus" Version="35.6.3" />
     <PackageVersion Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.6" />
@@ -18,9 +18,11 @@
     <PackageVersion Include="Hangfire.PostgreSql" Version="1.20.12" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.6.0" />
     <PackageVersion Include="Microsoft.Extensions.Identity.Stores" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.Extensions.Resilience" Version="9.6.0" />
     <PackageVersion Include="Moq" Version="4.20.72" />
+    <PackageVersion Include="Polly" Version="8.6.1" />
     <PackageVersion Include="Respawn" Version="6.2.1" />
-    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.11.0.117924" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.12.0.118525" />
     <!-- Application -->
     <PackageVersion Include="Scrutor" Version="6.1.0" />
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
