password reset & tested

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -20,12 +20,14 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "Jwt": {
-    "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
-    "Issuer": "clean-architecture",
-    "Audience": "developers",
-    "ExpirationInMinutes": 15,
-    "RefreshExpirationInDays": 2,
-    "MaxActiveTokensPerUser": 5
+    "AccessToken": {
+      "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
+      "Issuer": "clean-architecture",
+      "Audience": "developers",
+      "ExpirationInMinutes": 15,
+      "RefreshExpirationInDays": 2,
+      "MaxActiveTokensPerUser": 5
+    }
   },
   "Google": {
     "ClientId": "your-google-client-id.apps.googleusercontent.com",
@@ -38,9 +40,13 @@
   },
   "Email": {
     "SenderEmail": "yesslandolsi@gmail.com"
-  } , 
+  } ,
   "FrontEnd": {
-    "BaseUrl": "http://localhost:5173" , 
-    "EmailVerificationPagePath" : "/email-verification"
+    "BaseUrl": "http://localhost:5173",
+    "PasswordReset": "reset-password",
+    "EmailVerification": "/email-verification",
+    "AppName": "Meetini",
+    "SupportLink": "https://meetini.com/support",
+    "SecurityLink": "https://meetini.com/report"
   }
 }
