add google OPID

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -30,8 +30,8 @@
     }
   },
   "Google": {
-    "ClientId": "your-google-client-id.apps.googleusercontent.com",
-    "ClientSecret": "your-google-client-secret"
+    "ClientId": "924901662166-dvnnd557qd9rjb2a42sqv7es2o4t8pqn.apps.googleusercontent.com",
+    "ClientSecret": "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"
   },
   "AWS": {
     "AccessKey": "AKIA33KKBBTC3UIB5SPH",
