rotate and delete the keys

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -30,12 +30,8 @@
     }
   },
   "Google": {
-    "ClientId": "924901662166-dvnnd557qd9rjb2a42sqv7es2o4t8pqn.apps.googleusercontent.com",
-    "ClientSecret": "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"
   },
   "AWS": {
-    "AccessKey": "AKIA33KKBBTC3UIB5SPH",
-    "SecretKey": "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",
     "Region": "eu-north-1"
   },
   "Email": {
@@ -45,8 +41,8 @@
     "BaseUrl": "http://localhost:5173",
     "PasswordReset": "reset-password",
     "EmailVerification": "/email-verification",
-    "AppName": "Meetini",
-    "SupportLink": "https://meetini.com/support",
-    "SecurityLink": "https://meetini.com/report"
+    "AppName": "",
+    "SupportLink": "https://.com/support",
+    "SecurityLink": "https://.com/report"
   }
 }
