--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -30,13 +30,14 @@
     }
   },
   "Google": {
-    "ClientId": "924901662166-dvnnd557qd9rjb2a42sqv7es2o4t8pqn.apps.googleusercontent.com",
-    "ClientSecret": "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"
+    "ClientId": "",
+    "ClientSecret": ""
   },
   "AWS": {
-    "AccessKey": "AKIA33KKBBTC3UIB5SPH",
-    "SecretKey": "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",
-    "Region": "eu-north-1"
+    "Region": "us-east-1",
+
+    "SecretKey": "", 
+    "AccessKey": ""
   },
   "Email": {
     "SenderEmail": "yesslandolsi@gmail.com"
@@ -45,8 +46,8 @@
     "BaseUrl": "http://localhost:5173",
     "PasswordReset": "reset-password",
     "EmailVerification": "/email-verification",
-    "AppName": "Meetini",
-    "SupportLink": "https://meetini.com/support",
-    "SecurityLink": "https://meetini.com/report"
+    "AppName": "",
+    "SupportLink": "https://.com/support",
+    "SecurityLink": "https://.com/report"
   }
 }
