--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -43,9 +43,9 @@
     "SenderEmail": "yesslandolsi@gmail.com"
   } ,
   "FrontEnd": {
-    "BaseUrl": "http://localhost:5173",
-    "PasswordReset": "reset-password",
-    "EmailVerification": "/email-verification",
+    "BaseUrl": "http://localhost:3000",
+    "PasswordReset": "auth/reset-password",
+    "EmailVerification": "auth/email-verification",
     "AppName": "",
     "SupportLink": "https://.com/support",
     "SecurityLink": "https://.com/report"
