adding crud for profile infos

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -29,4 +29,10 @@
     <InternalsVisibleTo Include="ArchitectureTests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ImageProcessor\Delete\" />
+    <Folder Include="ImageProcessor\CheckExistance\" />
+    <Folder Include="Users\Profile\" />
+  </ItemGroup>
+
 </Project>
