--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -39,8 +39,12 @@
   "AWS": {
     "Region": "us-east-1",
 
-    "SecretKey": "", 
-    "AccessKey": ""
+    "SecretKey": "",
+    "AccessKey": "",
+    "S3": {
+      "BucketName": "booking-app-tn"    
+
+    }
   },
   "Email": {
     "SenderEmail": "yesslandolsi@gmail.com"
