--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,8 +4,9 @@
   </PropertyGroup>
   <!--.NET 9 packages. Most of them will work on .NET 8. If you need to, make the updates here individually.-->
   <ItemGroup>
-    <PackageVersion Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.1" />
-    <PackageVersion Include="AWSSDK.SimpleEmail" Version="4.0.0.11" />
+    <PackageVersion Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.2" />
+    <PackageVersion Include="AWSSDK.S3" Version="4.0.4.1" />
+    <PackageVersion Include="AWSSDK.SimpleEmail" Version="4.0.0.12" />
     <PackageVersion Include="Bogus" Version="35.6.3" />
     <PackageVersion Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.6" />
@@ -23,6 +24,7 @@
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="Polly" Version="8.6.1" />
     <PackageVersion Include="Respawn" Version="6.2.1" />
+    <PackageVersion Include="SixLabors.ImageSharp" Version="3.1.10" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.12.0.118525" />
     <!-- Application -->
     <PackageVersion Include="Scrutor" Version="6.1.0" />
